# deployment-strategy

./: .envrc  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Justfile  README.md  docker-compose.dev.yml  flake.nix  main.py  pyproject.toml
.direnv/: flake-profile-1-link
scripts/: deploy.sh  dev-env-setup.sh  docker-dev-setup.sh  docker-setup.sh  setup-npm.sh  test-dev-env.sh
src/hello_svc/: __init__.py  asgi.py  views.py
templates/: docker-compose.yml.template
tests/: test_views.py
